--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,10 @@
-name: Build APK
+name: Build Kivy APK
 
 on:
   push:
     branches:
-      - main
+      - development  # Adjust the branch name as needed
+  pull_request:
 
 jobs:
   build:
@@ -13,22 +14,23 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up JDK 8
-      uses: actions/setup-java@v1
+    - name: Set up Python environment
+      uses: actions/setup-python@v2
       with:
-        java-version: 8
+        python-version: '3.12.4'  # Replace with the Python version your project requires
 
-    - name: Install SDK and Accept Licenses
+    - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y wget unzip
-        wget https://dl.google.com/android/repository/commandlinetools-linux-7583922_latest.zip
-        mkdir -p $ANDROID_HOME/cmdline-tools
-        unzip -d $ANDROID_HOME/cmdline-tools commandlinetools-linux-7583922_latest.zip
-        mv $ANDROID_HOME/cmdline-tools/cmdline-tools $ANDROID_HOME/cmdline-tools/tools
-        yes | $ANDROID_HOME/cmdline-tools/tools/bin/sdkmanager --licenses
-        $ANDROID_HOME/cmdline-tools/tools/bin/sdkmanager "build-tools;35.0.0" "platforms;android-35"
+        sudo apt-get install -y build-essential python3-dev git
+        python3 -m pip install --upgrade pip setuptools wheel
+        python3 -m pip install --upgrade Cython virtualenv
 
-    - name: Build with Buildozer
+    - name: Install Buildozer
       run: |
+        python3 -m pip install buildozer
+
+    - name: Install Android SDK and NDK
+      run: |
+        sudo apt-get install -y libz-dev zlib1g-dev openjdk-8-jdk unzip
         buildozer android debug
