--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,36 +1,42 @@
-name: Build Kivy APK
+name: Build and Test
 
 on:
   push:
     branches:
       - development
   pull_request:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-    - name: Set up Python environment
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.10'
+      - name: Set up Conda
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-activate-base: false
+          miniconda-version: 23.3.1
+          
+      - name: Install dependencies
+        run: conda env update --file .github/workflows/environment.yml --name base
 
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y build-essential python3-dev git
-        python3 -m pip install --upgrade pip setuptools wheel
-        python3 -m pip install --upgrade Cython virtualenv
+      - name: Run build
+        run: |
+          source activate base
+          # Replace the following with your build command
+          echo "Running build..."
+          # Example command: buildozer android debug
+          # buildozer android debug
 
-    - name: Install Buildozer
-      run: |
-        python3 -m pip install buildozer
-
-    - name: Install Android SDK and NDK
-      run: |
-        sudo apt-get install -y libz-dev zlib1g-dev openjdk-8-jdk unzip
-        buildozer android debug
+      - name: Run tests
+        run: |
+          source activate base
+          # Replace the following with your test command
+          echo "Running tests..."
+          # Example command: pytest
+          # pytest
