--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,37 +6,52 @@ on:
       - development
   pull_request:
     branches:
-      - main
+      - '*'
+
 
 jobs:
   build:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v3
 
-      - name: Set up Conda
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          auto-activate-base: false
-          miniconda-version: 23.3.1
-          
-      - name: Install dependencies
-        run: conda env update --file .github/workflows/environment.yml --name base
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'  # Adjust Python version as needed
 
-      - name: Run build
-        run: |
-          source activate base
-          # Replace the following with your build command
-          echo "Running build..."
-          # Example command: buildozer android debug
-          # buildozer android debug
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y python3-pip python3-dev build-essential libgl1-mesa-dev libgles2-mesa-dev
+        pip install --upgrade pip
+        pip install kivy kivymd face_recognition facenet_pytorch
 
-      - name: Run tests
-        run: |
-          source activate base
-          # Replace the following with your test command
-          echo "Running tests..."
-          # Example command: pytest
-          # pytest
+    - name: Install Buildozer
+      run: |
+        pip install buildozer
+
+    - name: Build APK
+      run: |
+        buildozer android debug
+
+    - name: Run tests
+      run: |
+        # Assuming you have test scripts or a test suite
+        echo "Running tests..."
+        # Example: python -m unittest discover -s tests
+        # Adjust with your actual test command if needed
+
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v3
+      with:
+        name: build
+        path: |
+          bin/*.apk
+          # Add paths to any other artifacts you want to upload
+
+    - name: Clean up
+      run: |
+        buildozer android clean
