--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,7 @@ on:
   pull_request:
     branches:
       - '*'
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -27,6 +28,8 @@ jobs:
         wget https://dl.google.com/android/repository/commandlinetools-linux-8512546_latest.zip
         unzip commandlinetools-linux-8512546_latest.zip -d android-sdk
         export ANDROID_HOME=$PWD/android-sdk
+        mkdir -p $ANDROID_HOME/cmdline-tools/latest
+        mv android-sdk/cmdline-tools/* $ANDROID_HOME/cmdline-tools/latest/
         export PATH=$PATH:$ANDROID_HOME/cmdline-tools/latest/bin
 
     - name: Accept Android SDK Licenses
@@ -35,7 +38,7 @@ jobs:
 
     - name: Install Android Build-Tools
       run: |
-        sdkmanager "build-tools;35.0.0" || true
+        sdkmanager "build-tools;35.0.0"
 
     - name: Install Buildozer
       run: |
