--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,8 @@ jobs:
 
     - name: Accept Android SDK Licenses
       run: |
-        yes | sdkmanager --licenses || true
+        echo y | sdkmanager --licenses
+        sdkmanager --update
 
     - name: Install Android Build-Tools
       run: |
